@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+- Add in $rest->opsview_version call
 
 1.181000  2018-04-10 14:44:47+01:00 Europe/London
 
